[package]
name = "correkt"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcorrekt = { git = "https://github.com/archer884/libcorrekt" }
structopt = "0.3.14"
